two section done

--- a/index.html
+++ b/index.html
@@ -4,9 +4,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Document</title>
 </head>
 <body>
-    <h1>hello world</h1>
+     <nav>
+        <div class="navlogo">
+            <img src="./assets/logo-navbar.png" alt="">
+        </div>
+        <div class="navlist">
+            <ul>
+                <li><a href="">Features</a></li>
+                <li><a href="">How It Works</a></li>
+                <li><a href="">Why It's Different</a></li>
+            </ul>
+        </div>
+        <div class="navbtn">
+            <button type="submit">Get Early Access</button>
+        </div>
+     </nav>
+
+     <header>
+        <section id="hero">
+          <button class="early"><i class="fa-solid fa-circle"></i>Early Access Now Open</button>
+          <h1>Structured thinking,<br>not just note-taking.</h1>
+          <p>A private space to store notes, links, and learning summaries — designed to <br>
+help you think clearly, connect ideas, and turn learning into long-term knowledge.</p>
+<div class="herobtn">
+    <button class="firstbtn">Start Building Your Vault <i class="fa-solid fa-arrow-right"></i></button>
+    <button class="secondbtn"><i class="fa-solid fa-play"></i>See How It Works</button>
+</div>
+        </section>
+     </header>
+
+     <footer>
+        hi footer
+     </footer>
 </body>
 </html>
