--- a/index.html
+++ b/index.html
@@ -37,6 +37,55 @@ help you think clearly, connect ideas, and turn learning into long-term knowledg
         </section>
      </header>
 
+
+     <main>
+        <div class="heading">
+            <h1>
+Notes don't fail, Structure does.</h1>
+            <p>You're not bad at learning. Your tools just weren't built for how knowledge actually works.</p>
+        </div>
+        <div class="topics">
+            <div class="topic">
+                <img src="./assets/Vector.png" alt="">
+                <h3>Scattered Notes</h3>
+                <p>Your ideas live in 10 different apps, none of them connected.</p>
+            </div>
+            <div class="topic">
+                <img src="./assets/Bookmarks.png" alt="">
+                <h3>Bookmark overload</h3>
+                <p>Hundreds of saved links you'll never revisit or remember.</p>
+            </div>
+            <div class="topic">
+                <img src="./assets/Brain.png" alt="">
+                <h3>No idea connections</h3>
+                <p>Insights stay isolated, never building into bigger understanding.</p>
+            </div>
+            <div class="topic">
+                <img src="./assets/Info.png" alt="">
+                <h3>Forgetting what
+you learned</h3>
+                <p>Knowledge fades because there's no system to retain it.</p>
+            </div>
+        </div>
+
+        <section id="braining">
+           <div class="leftimage">
+             <img src="./assets/knowledge.png" alt="">
+           </div>
+           <div class="righttexts">
+             <h4>This Solution</h4>
+             <h1>Your second brain, <br>
+structured by design.</h1>
+<p>Personal Knowledge Vault isn't another note-taking app. zIt's a thinking environment where every note, link, and summary becomes part of an interconnected web of understanding.</p>
+<ul>
+    <li><img src="./assets/CheckCircle.png" alt="">Capture ideas with structure built-in from day one</li>
+    <li><img src="./assets/CheckCircle.png" alt="">Connect related concepts automatically as you write</li>
+    <li><img src="./assets/CheckCircle.png" alt="">Build lasting knowledge through reflection prompts</li>
+    <li><img src="./assets/CheckCircle.png" alt="">Find anything instantly with semantic search</li>
+</ul>
+           </div>
+        </section>
+     </main>
      <footer>
          <div class="flogo">
            <img src="./assets/logo-footer.png" alt="">
