--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <button class="early">
           <i class="fa-solid fa-circle"></i>Early Access Now Open
         </button>
-        <h1>Structured thinking,<br />not just note-taking.</h1>
+        <h1>Structured thinking,<br /><span>not just note-taking.</span></h1>
         <p>
           A private space to store notes, links, and learning summaries —
           designed to <br />
